fix(style.css): gap misure relative
cambiato le misure dei gap in .flex e .grid
con delle misure relative al viewport

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {
     flex-flow: row nowrap;
     padding: 0;
     margin: 0;
-    gap: 0 10px;
+    gap: 2vh 2vw;
 }
 
 /* i figli diretti del flex container, i flex item */
@@ -28,6 +28,6 @@ img {
     padding: 0;
     margin: 0;
     /* griglia adattiva */
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));    
-    gap: 10px 10px;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));    
+    gap: 2vh 2vw;
 }
